# aws-sso-manager

./: .gitignore  .pylintrc  README.md  mkdocs.yml  pyproject.toml  schema.yml
.github/workflows/: ci.yml  deploy-docs.yml
awsssomanager/: __init__.py  constants.py
awsssomanager/cli/: __init__.py  cli.py
awsssomanager/config/: __init__.py  config.py  schema.yml
awsssomanager/sso/: __init__.py  constants.py  credentials.py  device.py  roles.py  token.py
awsssomanager/utils/: __init__.py  general.py  validators.py
docs/: index.md  overview.md  serverless.yml  setup.md
scripts/: gen_ref_pages.py
tests/awsssomanager/config/: test_config.py
tests/data/: .aws-sso-manager.yml
