[tool.poetry]
name = "awsssomanager"
version = "0.3.0"
description = "AWS SSO Manager"
authors = ["Brett Fitzpatrick"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
coloredlogs = "^15.0.1"
boto3 = "^1.34.34"
pyyaml = "^6.0.1"
yamale = "^4.0.4"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.8"
mkdocs-minify-plugin = "^0.7.1"
mkdocs-table-reader-plugin = "^2.0.3"
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[tool.poetry.scripts]
aws-sso-manager = "awsssomanager.cli.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
